--- a/archives/toutiao-search/2024-02-12.md
+++ b/archives/toutiao-search/2024-02-12.md
@@ -1,58 +1,69 @@
 # 2024-02-12
 
-共 134 条
+共 144 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Feb 12 2024 09:38:03 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Feb 12 2024 10:14:02 GMT+0800 (China Standard Time) -->
 1. [大年初三睡到饱](https://so.toutiao.com/search?keyword=大年初三睡到饱)
 1. [中国女篮顺利进军巴黎奥运](https://so.toutiao.com/search?keyword=中国女篮顺利进军巴黎奥运)
 1. [镜头里的情感牵绊与文化寻根](https://so.toutiao.com/search?keyword=镜头里的情感牵绊与文化寻根)
 1. [贾玲：怕观众不喜欢瘦的自己](https://so.toutiao.com/search?keyword=贾玲：怕观众不喜欢瘦的自己)
-1. [24岁马拉松世界纪录保持者基普图姆去世](https://so.toutiao.com/search?keyword=24岁马拉松世界纪录保持者基普图姆去世)
-1. [胡歌陈龙去养老院看望游本昌](https://so.toutiao.com/search?keyword=胡歌陈龙去养老院看望游本昌)
 1. [年后走亲戚像送快递](https://so.toutiao.com/search?keyword=年后走亲戚像送快递)
+1. [胡歌陈龙去养老院看望游本昌](https://so.toutiao.com/search?keyword=胡歌陈龙去养老院看望游本昌)
 1. [小伙开兰博基尼回村过年被撞报废](https://so.toutiao.com/search?keyword=小伙开兰博基尼回村过年被撞报废)
-1. [山东一景区发生火灾 多辆车被烧毁](https://so.toutiao.com/search?keyword=山东一景区发生火灾+多辆车被烧毁)
+1. [基普图姆原计划4月力争“破2”](https://so.toutiao.com/search?keyword=基普图姆原计划4月力争“破2”)
 1. [最高检评《第二十条》：推卸与担当](https://so.toutiao.com/search?keyword=最高检评《第二十条》：推卸与担当)
+1. [大年初二一家人用最高礼仪迎接女婿](https://so.toutiao.com/search?keyword=大年初二一家人用最高礼仪迎接女婿)
 1. [“吃大盘鸡全是鸡脖子”系摆拍](https://so.toutiao.com/search?keyword=“吃大盘鸡全是鸡脖子”系摆拍)
 1. [胡锡进说贾玲确实太牛了](https://so.toutiao.com/search?keyword=胡锡进说贾玲确实太牛了)
-1. [16个外甥来过年舅舅红包发到手软](https://so.toutiao.com/search?keyword=16个外甥来过年舅舅红包发到手软)
-1. [菲海警船侵闯黄岩岛海域 中方驱离](https://so.toutiao.com/search?keyword=菲海警船侵闯黄岩岛海域+中方驱离)
-1. [贾玲和杨迪聊五小时菜一口没动](https://so.toutiao.com/search?keyword=贾玲和杨迪聊五小时菜一口没动)
+1. [24岁马拉松世界纪录保持者基普图姆去世](https://so.toutiao.com/search?keyword=24岁马拉松世界纪录保持者基普图姆去世)
 1. [压岁钱成了年轻人的新焦虑](https://so.toutiao.com/search?keyword=压岁钱成了年轻人的新焦虑)
-1. [大年初二一家人用最高礼仪迎接女婿](https://so.toutiao.com/search?keyword=大年初二一家人用最高礼仪迎接女婿)
-1. [热辣滚烫结束影院没人想离开](https://so.toutiao.com/search?keyword=热辣滚烫结束影院没人想离开)
-1. [安徽人走亲戚的标配](https://so.toutiao.com/search?keyword=安徽人走亲戚的标配)
-1. [男子过年接连弄丢两个儿子](https://so.toutiao.com/search?keyword=男子过年接连弄丢两个儿子)
+1. [贾玲和杨迪聊五小时菜一口没动](https://so.toutiao.com/search?keyword=贾玲和杨迪聊五小时菜一口没动)
+1. [《热辣滚烫》翻拍自日影《百元之恋》](https://so.toutiao.com/search?keyword=《热辣滚烫》翻拍自日影《百元之恋》)
+1. [湖南一家族连续7年自办春晚](https://so.toutiao.com/search?keyword=湖南一家族连续7年自办春晚)
+1. [外地女婿回村过年统一姿势](https://so.toutiao.com/search?keyword=外地女婿回村过年统一姿势)
+1. [巴西奥运男足无缘巴黎奥运会](https://so.toutiao.com/search?keyword=巴西奥运男足无缘巴黎奥运会)
 1. [《热辣滚烫》好看吗](https://so.toutiao.com/search?keyword=《热辣滚烫》好看吗)
 1. [女婿陪媳妇回娘家的统一状态](https://so.toutiao.com/search?keyword=女婿陪媳妇回娘家的统一状态)
-1. [赵丽颖《第二十条》中表现有哪些惊喜](https://so.toutiao.com/search?keyword=赵丽颖《第二十条》中表现有哪些惊喜)
+1. [舅舅给16个外甥发红包发到手软](https://so.toutiao.com/search?keyword=舅舅给16个外甥发红包发到手软)
 1. [一家43人吃年夜饭摆了182碗菜](https://so.toutiao.com/search?keyword=一家43人吃年夜饭摆了182碗菜)
-1. [外地女婿回村过年统一姿势](https://so.toutiao.com/search?keyword=外地女婿回村过年统一姿势)
+1. [《热辣滚烫》结束影院没人想离开](https://so.toutiao.com/search?keyword=《热辣滚烫》结束影院没人想离开)
+1. [男子过年接连弄丢两个儿子](https://so.toutiao.com/search?keyword=男子过年接连弄丢两个儿子)
+1. [贾玲说不是变瘦了而是变强了](https://so.toutiao.com/search?keyword=贾玲说不是变瘦了而是变强了)
 1. [贾玲兑现了30亿票房承诺](https://so.toutiao.com/search?keyword=贾玲兑现了30亿票房承诺)
 1. [杨幂春晚礼服下穿了秋裤](https://so.toutiao.com/search?keyword=杨幂春晚礼服下穿了秋裤)
-1. [今年北京庙会有多火](https://so.toutiao.com/search?keyword=今年北京庙会有多火)
-1. [《第二十条》有多生猛](https://so.toutiao.com/search?keyword=《第二十条》有多生猛)
-1. [湖南一家族连续7年自办春晚](https://so.toutiao.com/search?keyword=湖南一家族连续7年自办春晚)
-1. [男孩不愿给后妈拜年被打破头](https://so.toutiao.com/search?keyword=男孩不愿给后妈拜年被打破头)
 1. [一家人搓麻将不料天降大雪“炸胡”](https://so.toutiao.com/search?keyword=一家人搓麻将不料天降大雪“炸胡”)
-1. [西甲积分榜：巴萨第三距榜首10分](https://so.toutiao.com/search?keyword=西甲积分榜：巴萨第三距榜首10分)
-1. [趣评春晚](https://so.toutiao.com/search?keyword=趣评春晚)
+1. [中东多国谴责以色列进攻拉法计划](https://so.toutiao.com/search?keyword=中东多国谴责以色列进攻拉法计划)
+1. [赵丽颖《第二十条》中表现有哪些惊喜](https://so.toutiao.com/search?keyword=赵丽颖《第二十条》中表现有哪些惊喜)
+1. [山东一景区发生火灾 多辆车被烧毁](https://so.toutiao.com/search?keyword=山东一景区发生火灾+多辆车被烧毁)
+1. [《第二十条》有多生猛](https://so.toutiao.com/search?keyword=《第二十条》有多生猛)
+1. [男子醉后被扶着“强制营业”发红包](https://so.toutiao.com/search?keyword=男子醉后被扶着“强制营业”发红包)
 1. [女孩瞒着家人飞了16个小时回家过年](https://so.toutiao.com/search?keyword=女孩瞒着家人飞了16个小时回家过年)
-1. [德国总理：普京总是说谎](https://so.toutiao.com/search?keyword=德国总理：普京总是说谎)
-1. [媒体专访《熊出没·逆转时空》主创](https://so.toutiao.com/search?keyword=媒体专访《熊出没·逆转时空》主创)
-1. [拜登要求以进攻拉法前确保民众安全](https://so.toutiao.com/search?keyword=拜登要求以进攻拉法前确保民众安全)
-1. [贾玲说不是变瘦了而是变强了](https://so.toutiao.com/search?keyword=贾玲说不是变瘦了而是变强了)
-1. [智利做车厘子生意的中国人赚钱了吗](https://so.toutiao.com/search?keyword=智利做车厘子生意的中国人赚钱了吗)
-1. [为何我们对龙的翻译很较真](https://so.toutiao.com/search?keyword=为何我们对龙的翻译很较真)
-1. [中国女篮参加奥运次数已经超过男篮](https://so.toutiao.com/search?keyword=中国女篮参加奥运次数已经超过男篮)
+1. [今年北京庙会有多火](https://so.toutiao.com/search?keyword=今年北京庙会有多火)
+1. [交警最后一班岗对讲机收到“致敬”](https://so.toutiao.com/search?keyword=交警最后一班岗对讲机收到“致敬”)
 1. [玻璃桌炸裂全家人淡定举杯](https://so.toutiao.com/search?keyword=玻璃桌炸裂全家人淡定举杯)
-1. [重庆巫溪抵制“无事酒”](https://so.toutiao.com/search?keyword=重庆巫溪抵制“无事酒”)
+1. [范丞丞承认曾说想演马丽老公](https://so.toutiao.com/search?keyword=范丞丞承认曾说想演马丽老公)
 1. [德国动物园扑杀狒狒给食肉动物加餐](https://so.toutiao.com/search?keyword=德国动物园扑杀狒狒给食肉动物加餐)
 1. [过年你们发了多少红包](https://so.toutiao.com/search?keyword=过年你们发了多少红包)
-1. [中东多国谴责以色列进攻拉法计划](https://so.toutiao.com/search?keyword=中东多国谴责以色列进攻拉法计划)
-1. [范丞丞承认曾说想演马丽老公](https://so.toutiao.com/search?keyword=范丞丞承认曾说想演马丽老公)
-1. [巴西奥运男足无缘巴黎奥运会](https://so.toutiao.com/search?keyword=巴西奥运男足无缘巴黎奥运会)
+1. [贾玲：雷佳音演戏很好](https://so.toutiao.com/search?keyword=贾玲：雷佳音演戏很好)
+1. [非洲杯自2006年首次由东道主夺冠](https://so.toutiao.com/search?keyword=非洲杯自2006年首次由东道主夺冠)
+1. [重庆巫溪抵制“无事酒”](https://so.toutiao.com/search?keyword=重庆巫溪抵制“无事酒”)
+1. [趣评春晚](https://so.toutiao.com/search?keyword=趣评春晚)
+1. [智利做车厘子生意的中国人赚钱了吗](https://so.toutiao.com/search?keyword=智利做车厘子生意的中国人赚钱了吗)
+1. [拜登要求以进攻拉法前确保民众安全](https://so.toutiao.com/search?keyword=拜登要求以进攻拉法前确保民众安全)
+1. [天津姑爷：去丈母娘家“逮嘛干嘛”](https://so.toutiao.com/search?keyword=天津姑爷：去丈母娘家“逮嘛干嘛”)
+1. [国家级非遗英歌舞首次亮相乌鲁木齐](https://so.toutiao.com/search?keyword=国家级非遗英歌舞首次亮相乌鲁木齐)
+1. [懂车帝硬核测试特斯拉皮卡](https://so.toutiao.com/search?keyword=懂车帝硬核测试特斯拉皮卡)
+1. [16个外甥来过年舅舅红包发到手软](https://so.toutiao.com/search?keyword=16个外甥来过年舅舅红包发到手软)
+1. [菲海警船侵闯黄岩岛海域 中方驱离](https://so.toutiao.com/search?keyword=菲海警船侵闯黄岩岛海域+中方驱离)
+1. [热辣滚烫结束影院没人想离开](https://so.toutiao.com/search?keyword=热辣滚烫结束影院没人想离开)
+1. [安徽人走亲戚的标配](https://so.toutiao.com/search?keyword=安徽人走亲戚的标配)
+1. [男孩不愿给后妈拜年被打破头](https://so.toutiao.com/search?keyword=男孩不愿给后妈拜年被打破头)
+1. [西甲积分榜：巴萨第三距榜首10分](https://so.toutiao.com/search?keyword=西甲积分榜：巴萨第三距榜首10分)
+1. [德国总理：普京总是说谎](https://so.toutiao.com/search?keyword=德国总理：普京总是说谎)
+1. [媒体专访《熊出没·逆转时空》主创](https://so.toutiao.com/search?keyword=媒体专访《熊出没·逆转时空》主创)
+1. [为何我们对龙的翻译很较真](https://so.toutiao.com/search?keyword=为何我们对龙的翻译很较真)
+1. [中国女篮参加奥运次数已经超过男篮](https://so.toutiao.com/search?keyword=中国女篮参加奥运次数已经超过男篮)
 1. [潘展乐赛后现场获赠3万美元奖金](https://so.toutiao.com/search?keyword=潘展乐赛后现场获赠3万美元奖金)
 1. [贾玲说未来体型看心情](https://so.toutiao.com/search?keyword=贾玲说未来体型看心情)
 1. [李庚希回应摇太阳排片少](https://so.toutiao.com/search?keyword=李庚希回应摇太阳排片少)
@@ -118,7 +129,6 @@
 1. [3岁女孩除夕夜走失 民警全力搜寻](https://so.toutiao.com/search?keyword=3岁女孩除夕夜走失+民警全力搜寻)
 1. [小米平板6S Pro官图曝光](https://so.toutiao.com/search?keyword=小米平板6S+Pro官图曝光)
 1. [贾玲最累时会听《送你一朵小红花》](https://so.toutiao.com/search?keyword=贾玲最累时会听《送你一朵小红花》)
-1. [懂车帝硬核测试特斯拉皮卡](https://so.toutiao.com/search?keyword=懂车帝硬核测试特斯拉皮卡)
 1. [B费加盟曼联以来对阵维拉进球最多](https://so.toutiao.com/search?keyword=B费加盟曼联以来对阵维拉进球最多)
 1. [河南春晚《凤鸣朝阳》拍摄花絮](https://so.toutiao.com/search?keyword=河南春晚《凤鸣朝阳》拍摄花絮)
 1. [白敬亭金晨共舞](https://so.toutiao.com/search?keyword=白敬亭金晨共舞)
